# registry

./: .dockerignore  .gitignore  .well-known.json  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  authorized_keys.toml  config.json  docker-bake.hcl  docker-compose.postgres.yaml  docker-compose.yaml  entrypoint.sh  fly.toml  http.wasm  index.js  insert.txt  inspect  new  package-lock.json  package.json  proof.txt
components/: Cargo.toml
components/hash-checkpoint/: Cargo.toml
components/hash-checkpoint/hash-checkpoint/: hash_checkpoint.core2.wasm  hash_checkpoint.d.ts  hash_checkpoint.js
components/hash-checkpoint/hash-checkpoint/exports/: component-hash-checkpoint-hashing.d.ts
components/hash-checkpoint/hash-checkpoint/imports/: environment.d.ts  exit.d.ts  filesystem.d.ts  preopens.d.ts  streams.d.ts
components/hash-checkpoint/src/: lib.rs
components/hash-checkpoint/wit/: world.wit
components/protocol-wasm/: Cargo.toml  old.wit  world.wit
components/protocol-wasm/src/: lib.rs  registry.rs  serde_envelope.rs
components/protocol-wasm/src/package/: mod.rs  validate.rs
components/validation/: Cargo.toml
components/validation/src/: lib.rs
components/validation/wit/: world.wit
crates/api/: Cargo.toml
crates/api/src/: content.rs  fetch.rs  lib.rs  package.rs  proof.rs  well_known.rs
crates/api/src/v1/: content.rs  fetch.rs  ledger.rs  mod.rs  monitor.rs  package.rs  paths.rs  proof.rs
crates/cli/: Cargo.toml
crates/cli/src/: demo.rs  main.rs
crates/client/: Cargo.toml
crates/client-storage/: Cargo.toml  world.wit
crates/client-storage/src/: lib.rs  storage.rs
crates/client/src/: '  api.rs  config.rs  depsolve.rs  file_storage.rs  keyring.rs  lib.rs  lock.rs  registry_url.rs  storage.rs  version_util.rs
crates/client/src/keyring/: error.rs  flatfile.rs  mod.rs
crates/client/src/storage/: fs.rs
crates/credentials/: Cargo.toml
crates/credentials/src/: keyring.rs  lib.rs
crates/crypto/: Cargo.toml
crates/crypto-comp/: Cargo.toml  world.wit
crates/crypto-comp/src/: lib.rs  prefix.rs  visit_bytes.rs
crates/crypto-comp/src/hash/: mod.rs  static.rs
crates/crypto-comp/src/signing/: private_key.rs  public_key.rs  signature.rs
crates/crypto/examples/: key_gen.rs
crates/crypto/src/: encoding.rs  lib.rs  prefix.rs  visit_bytes.rs
crates/crypto/src/hash/: dynamic.rs  mod.rs  static.rs
crates/crypto/src/signing/: mod.rs  private_key.rs  public_key.rs  signature.rs
crates/forrest/: Cargo.toml
crates/forrest/benches/: log.rs  map.rs
crates/forrest/src/: hash.rs  lib.rs  proofs.proto
crates/forrest/src/log/: in_order.rs  mod.rs  node.rs  proof.rs  proof_bundle.rs  proofs.rs  sparse_data.rs  stack_log.rs  vec_log.rs
crates/forrest/src/map/: fork.rs  hash.rs  iter.rs  link.rs  map.rs  mod.rs  node.rs  path.rs  proof.rs  proof_bundle.rs
crates/protocol/: Cargo.toml  build.rs
crates/protocol/src/: .lib.rs.swp  convert.rs  lib.rs  proto_envelope.rs  registry.rs  serde_envelope.rs
crates/protocol/src/operator/: .validate.rs.swp  mod.rs  model.rs  state.rs  validate.rs
crates/protocol/src/package/: .mod.rs.swp  .validate.rs.swp  mod.rs  model.rs  state.rs  validate.rs
crates/protocol/src/query/: mod.rs  model.rs
crates/protocol/tests/: .operator.rs.swp  .package.rs.swp  operator.rs  package.rs
crates/protocol/tests/operator-logs/: longer.json  minimal.json
crates/protocol/tests/package-logs/: longer.json  minimal.json
crates/prototype-server/: Cargo.toml
crates/prototype-server/src/: main.rs  server.rs
crates/server/: .well-known.json  Cargo.toml  Dockerfile  README.md  build.rs  diesel.toml  entrypoint.sh  openapi.yaml  readme.md
crates/server/content/files/: sha256-93c35df3eb06f3467a7f30e97638b44a97119903c2a60428e2e3025a36421b2d  sha256-c55bf4cc152e0736e1af8b64b1787b4bb8707024c7e20ca948ac1a78c92c4c66  sha256-d780a28ec35f001cf1e61401ec1ee22dad5821ccf8280affcf135074c7c53cf2
crates/server/src/: args.rs  datastore.rs  lib.rs  main.rs  monitoring.rs
crates/server/src/api/: auth_layer.rs  content.rs  fetch.rs  mod.rs  package.rs  proof.rs  well_known.rs
crates/server/src/contentstore/: local.rs  mod.rs
crates/server/src/datastore/: .memory.rs.swp  memory.rs  mod.rs  postgres.rs
crates/server/src/extractor/: interfaces.rs  metadata.rs  mod.rs
crates/server/src/policy/: mod.rs
crates/server/src/services/: core.rs  mod.rs
crates/server/tests/: welcome123.txt
crates/test-client/: Cargo.toml
crates/test-client/src/: main.rs
crates/transparency/: Cargo.toml  build.rs
crates/transparency/benches/: map.rs
crates/transparency/src/: lib.rs
crates/transparency/src/log/: mod.rs  proof.rs  proof_bundle.rs  sparse_data.rs  stack_log.rs  vec_log.rs
crates/transparency/src/map/: fork.rs  link.rs  map.rs  mod.rs  node.rs  path.rs  proof.rs  proof_bundle.rs  singleton.rs
crates/warg/: Cargo.toml  build.rs
crates/warg-cli/: Cargo.toml
crates/warg-cli/src/: data.rs  demo.rs  install.rs  main.rs  publish.rs  publish_info.rs  registry_info.rs  update.rs
crates/warg-client/: Cargo.toml
crates/warg-client/src/: api.rs  file_storage.rs  lib.rs  storage.rs
crates/warg-crypto/: Cargo.toml
crates/warg-crypto/examples/: key_gen.rs
crates/warg-crypto/src/: encoding.rs  lib.rs  prefix.rs  visit_bytes.rs
crates/warg-crypto/src/hash/: dynamic.rs  mod.rs  static.rs
crates/warg-crypto/src/signing/: mod.rs  private_key.rs  public_key.rs
crates/warg-server/: Cargo.toml
crates/warg-server/src/: content.rs  lib.rs  main.rs  policy.rs
crates/warg-server/src/api/: content.rs  fetch.rs  mod.rs  package.rs  proof.rs
crates/warg-server/src/services/: core.rs  mod.rs  (+4 more)
crates/warg/src/: hash.rs  lib.rs  operator.rs  package.rs  proto_envelope.rs  registry.rs  serde_envelope.rs  signing.rs  version.rs
crates/warg/tests/: README.md  operator.rs  package.rs
proto/: Cargo.toml  build.rs  lib.rs
proto/google/protobuf/: any.proto
proto/google/rpc/: error_details.proto  http.proto
proto/warg/internal/: internal.proto
proto/warg/protocol/: warg.proto
proto/warg/transparency/: proofs.proto
(+267 files in other folders)
