[package]
name = "warg-cli"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[dependencies]
warg-crypto = { workspace = true }
warg-protocol = { workspace = true }
warg-client = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
async-trait = { workspace = true }
bytes = { workspace = true }
p256 = { workspace = true }
rand_core = { workspace = true }
url = { workspace = true }
keyring = "2.0.3"
dialoguer = "0.10.4"
rpassword = "7.2.0"

# TODO: remove these demo-related dependencies
wasmtime = "9.0"
wasmtime-wasi = "9.0"

[dev-dependencies]
reqwest = { workspace = true }
serde_json = { workspace = true }
warg-server = { workspace = true }
warg-api = { workspace = true }
wat = "1.0.66"
wit-component = "0.11.0"
wit-parser = "0.8.0"
testresult = "0.3.0"

[features]
default = []
postgres = ["warg-server/postgres"]

[workspace]
members = ["crates/server"]

[workspace.package]
version = "0.1.0"
authors = ["The Warg Registry Project Developers"]
edition = "2021"
rust-version = "1.66.0"

[workspace.dependencies]
warg-api = { path = "crates/api" }
warg-client = { path = "crates/client" }
warg-crypto = { path = "crates/crypto" }
warg-protobuf = { path = "proto" }
warg-protocol = { path = "crates/protocol" }
warg-transparency = { path = "crates/transparency" }
warg-server = { path = "crates/server" }
clap = { version = "4.3.0", features = ["derive", "env"] }
thiserror = "1.0.40"
anyhow = "1.0.71"
serde = { version = "1.0.163", features = ["derive", "rc"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
tokio-util = "0.7.8"
serde_with = { version = "3.0.0", features = ["base64"] }
indexmap = { version = "1.9.3", features = ["serde"] }
tempfile = "3.5.0"
reqwest = { version = "0.11.18", features = ["json", "stream"] }
futures-util = "0.3.28"
async-trait = "0.1.68"
bytes = "1.4.0"
hex = "0.4.3"
base64 = "0.21.2"
leb128 = "0.2.5"
sha2 = "0.10.6"
digest = "0.10.7"
rand_core = "0.6.4"
p256 = "0.13.2"
secrecy = "0.8.0"
signature = "2.1.0"
prost = "0.11.9"
prost-types = "0.11.9"
pbjson = "0.5.1"
pbjson-types = "0.5.1"
semver = { version = "1.0.17", features = ["serde"] }
axum = { version = "0.6.18", features = ["http2", "headers", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
futures = "0.3.28"
serde_bytes = "0.11.9"
pretty_assertions = "1.3.0"
prost-build = "0.11.9"
pbjson-build = "0.5.1"
ciborium = "0.2.1"
criterion = "0.5.1"
rand = "0.8.5"
url = "2.3.1"
libc = "0.2.144"
itertools = "0.10.5"
dirs = "5.0.1"
once_cell = "1.17.1"
walkdir = "2.3.3"
normpath = "1.1.1"
pathdiff = "0.2.1"
diesel = "2.1.0"
diesel-async = "0.3.0"
diesel_json = "0.2.0"
diesel-derive-enum = "2.0.1"
chrono = "0.4.24"
regex = "1"
wasmparser = "0.107.0"
protox = "0.3.3"
