[package]
name = "warg-cli"
description = "The warg registry command line interface."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true}

[dependencies]
warg-crypto = { workspace = true }
warg-protocol = { workspace = true }
warg-client = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
async-trait = { workspace = true }
bytes = { workspace = true }
p256 = { workspace = true }
rand_core = { workspace = true }
url = { workspace = true }
keyring = "2.3.0"
dialoguer = "0.11.0"
rpassword = "7.3.1"
itertools = "0.12.1"

[dev-dependencies]
reqwest = { workspace = true }
serde_json = { workspace = true }
warg-server = { workspace = true }
warg-api = { workspace = true }
wat = "1.0.85"
wit-component = "0.20.1"
wit-parser = "0.13.1"
testresult = "0.3.0"

[features]
default = []
postgres = ["warg-server/postgres"]

[workspace]
members = ["crates/server"]

[workspace.package]
version = "0.4.0-dev"
authors = ["The Warg Registry Project Developers"]
edition = "2021"
rust-version = "1.66.0"
license = "Apache-2.0 WITH LLVM-exception"
homepage = "https://warg.io/"
repository = "https://github.com/bytecodealliance/registry"

[workspace.dependencies]
warg-api = { path = "crates/api", version = "0.4.0-dev" }
warg-client = { path = "crates/client", version = "0.4.0-dev" }
warg-crypto = { path = "crates/crypto", version = "0.4.0-dev" }
warg-protobuf = { path = "proto", version = "0.4.0-dev" }
warg-protocol = { path = "crates/protocol", version = "0.4.0-dev" }
warg-transparency = { path = "crates/transparency", version = "0.4.0-dev" }
warg-server = { path = "crates/server", version = "0.4.0-dev" }
clap = { version = "4.3.24", features = ["derive", "env"] }
thiserror = "1.0.56"
anyhow = "1.0.79"
serde = { version = "1.0.196", features = ["derive", "rc"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.10"
serde_with = { version = "3.6.0", features = ["base64"] }
indexmap = { version = "2.2.2", features = ["serde"] }
tempfile = "3.10.0"
reqwest = { version = "0.11.24", features = ["json", "stream"] }
futures-util = "0.3.30"
async-trait = "0.1.77"
bytes = "1.5.0"
hex = "0.4.3"
base64 = "0.21.7"
leb128 = "0.2.5"
sha2 = "0.10.8"
digest = "0.10.7"
rand_core = "0.6.4"
p256 = "0.13.2"
secrecy = "0.8.0"
signature = "2.2.0"
prost = "0.12.3"
prost-types = "0.12.3"
pbjson = "0.6.0"
pbjson-types = "0.6.0"
semver = { version = "1.0.21", features = ["serde"] }
axum = { version = "0.7.4", features = ["http2", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures = "0.3.30"
serde_bytes = "0.11.14"
pretty_assertions = "1.4.0"
prost-build = "0.12.3"
pbjson-build = "0.6.2"
ciborium = "0.2.2"
criterion = "0.5.1"
rand = "0.8.5"
url = "2.5.0"
libc = "0.2.153"
itertools = "0.12.1"
dirs = "5.0.1"
once_cell = "1.19.0"
walkdir = "2.4.0"
normpath = "1.1.1"
pathdiff = "0.2.1"
diesel = "2.1.4"
diesel-async = "0.4.1"
diesel_json = "0.2.1"
diesel_migrations = "2.1.0"
diesel-derive-enum = "2.1.0"
chrono = "0.4.33"
regex = "1"
wasmparser = "0.121.0"
protox = "0.5.1"
toml = "0.8.2"
