[workspace]

members = [
    "protocol-wasm",
]

[workspace.dependencies]
anyhow = "1.0.69"
base64 = "0.21.0"
hex = "0.4.3"
indexmap = { version = "1.9.2", features = ["serde"] }
prost = "0.11.8"
prost-types = "0.11.8"
pbjson = "0.5.1"
pbjson-types = "0.5.1"
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1.0.156", features = ["derive", "rc"] }
serde_json = "1.0.94"
serde_with = { version = "2.3.1", features = ["base64"] }
thiserror = "1.0.39"
warg-crypto = { path = "../crates/crypto" }
warg-transparency = { path = "../crates/transparency" }
warg-protocol = { path = "../crates/protocol" }
pbjson-build = "0.5.1"
prost-build = "0.11.8"