[package]
name = "validation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.2"
chrono = "0.4.26"
semver = "1.0.17"
wit-bindgen = { version = "0.7.0", default_features = false }
warg-protocol = { workspace = true }
warg-crypto = { workspace = true }
warg-transparency = { workspace = true }
warg-api = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:validation"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.dependencies]
