[package]
name = "warg-api"
description = "Serializable types for the Warg registry REST API."
# TODO: set this back to the workspace version before next release
version = "0.1.1"
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true}

[dependencies]
warg-protocol = { workspace = true }
warg-crypto = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
