[package]
name = "client-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
digest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
warg-crypto = { workspace = true }
warg-protocol = { workspace = true }
wit-bindgen = { version = "0.3.0", default_features = false }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
target = { path = "world.wit" }

[package.metadata.component.dependencies]
