[package]
name = "warg-client"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[dependencies]
warg-crypto = { workspace = true }
warg-protocol = { workspace = true }
warg-api = { workspace = true }
warg-transparency = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
indexmap = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }