[package]
name = "warg-client"
description = "A client library for Warg component registries."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true}

[dependencies]
warg-crypto = { workspace = true }
warg-protocol = { workspace = true }
warg-api = { workspace = true }
warg-transparency = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }
dirs = { workspace = true }
once_cell = { workspace = true }
walkdir = { workspace = true }
normpath = { workspace = true }
pathdiff = { workspace = true }
wasm-metadata = { workspace = true }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48"
features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
]
