[package]
name = "warg-credentials"
description = "A library to manage the keyring for the Warg client."
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
indexmap = { workspace = true }
keyring = { workspace = true }
secrecy = { workspace = true }
warg-client = { workspace = true }
warg-crypto = { workspace = true }
