[package]
name = "crypto-comp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = { version = "0.3.0", default_features = false }
hex = { workspace = true }
base64 = { workspace = true }
leb128 = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
digest = { workspace = true }
rand_core = { workspace = true }
p256 = { workspace = true }
secrecy = { workspace = true }
signature = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
target = { path = "world.wit" }

[package.metadata.component.dependencies]
