[package]
name = "warg-crypto"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[dependencies]
hex = { workspace = true }
base64 = { workspace = true }
leb128 = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
digest = { workspace = true }
rand_core = { workspace = true }
p256 = { workspace = true }
secrecy = { workspace = true }
signature = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
once_cell.workspace = true

[dev-dependencies]
pretty_assertions = { workspace = true }
