[package]
name = "forrest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "0.10.3"
hashbrown = "0.12.3"
serde = { version = "1.0.144", default-features = false, features = ["derive"] }
serde_bytes = "0.11.7"

[dev-dependencies]
ciborium = "0.2.0"
criterion = "0.3"
sha2 = "0.10.2"
rand = "0.8.5"

[[bench]]
name = "map"
harness = false
