[package]
name = "forrest"
version = "0.1.0"
edition = "2021"
authors = ["Kyle Brown", "Nathaniel McCallum"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warg-crypto = { path = "../warg-crypto" }
hashbrown = "0.12"
serde = { version = "1.0.144", default-features = false, features = ["derive"] }
serde_bytes = "0.11.7"

[dev-dependencies]
ciborium = "0.2.0"
criterion = "0.3"
rand = "0.8.5"
sha2 = "0.10"

[[bench]]
name = "map"
harness = false

[[bench]]
name = "log"
harness = false
