[package]
name = "warg-protocol"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[dependencies]
warg-crypto = { workspace = true }
warg-protobuf = { workspace = true }
warg-transparency = { workspace = true }
wasmparser = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
pbjson-types = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
serde_with = { workspace = true }
semver = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
