[package]
name = "wasm-registry-prototype-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5", features = ["headers"] }
axum-macros = "0.2"
base64 = "0.13"
clap = { version = "3.2.5", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasm-registry = { path = "../.." }