[package]
name = "warg-server"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[dependencies]
warg-api = { workspace = true }
warg-crypto = { workspace = true }
warg-protocol = { workspace = true }
warg-transparency = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
url = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace", "cors"]}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bytes = { workspace = true }
wasmparser = { workspace = true }
secrecy = { workspace = true }
toml = { workspace = true }
diesel = { workspace = true, features = ["postgres", "serde_json", "chrono"], optional = true }
diesel-async = { workspace = true, features = ["postgres", "deadpool"], optional = true }
diesel_json = { workspace = true, optional = true}
diesel_migrations = { workspace = true, optional = true }
diesel-derive-enum = { workspace = true, optional = true, features = ["postgres"] }
serde_json = { workspace = true }
chrono = { workspace = true, optional = true }
oci-distribution = { git = "https://github.com/devigned/oci-distribution", branch = "os-wasi" }

[features]
default = []
debug = []
postgres = ["diesel", "diesel-async", "diesel_json", "diesel_migrations", "diesel-derive-enum", "chrono"]
