[package]
name = "warg-transparency"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[dependencies]
warg-crypto = { workspace = true }
warg-protobuf = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
pbjson-build = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
ciborium = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }

[[bench]]
name = "map"
harness = false

[[bench]]
name = "log"
harness = false
