[package]
name = "warg-transparency"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[dependencies]
warg-crypto = { workspace = true }
warg-protobuf = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }

[[bench]]
name = "map"
harness = false

[[bench]]
name = "log"
harness = false
