[package]
name = "warg-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.23.1", features = ["full"] }
indexmap = { version = "1.9.2", features = ["serde"] }

warg-crypto ={ path = "../warg-crypto" }
warg-protocol = { path = "../warg" }
warg-client = { path = "../warg-client" }

# DEMO
wasmtime = "5.0"
wasmtime-wasi = "5.0"