[package]
name = "warg-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
thiserror = "1.0"
axum = { version = "0.6.1", features = ["http2", "headers", "macros"] }
clap = { version = "4.0.32", features = ["derive"] }
serde = { version = "1.0.152", features = ["rc"] }
tokio = { version = "1.23.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
reqwest = { version = "0.11.14", features = ["json"] }
indexmap = { version = "1.9.2", features = ["serde"] }

warg-crypto = { path = "../warg-crypto" }
forrest = { path = "../forrest" }
warg-protocol = { path = "../warg" }
warg-server ={ path = "../warg-server" }
