[package]
name = "warg-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
base64 = "0.13.0"
leb128 = "0.2.5"

serde = { version = "1.0", features = ["derive"] }

sha2 = "0.10"
digest = "0.10"

rand_core = { version = "0.6", features = ["getrandom"]}
p256 = "0.11"
secrecy = "0.8"
signature = "1.5"

thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
pretty_assertions = "1.1.0"