[package]
name = "warg-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
axum = { version = "0.6.1", features = ["http2", "headers", "macros"] }
clap = { version = "4.0.32", features = ["derive"] }
futures = "0.3.25"
sha2 = "0.10.6"
tempfile = "3.3.0"
tokio = { version = "1.23.1", features = ["full"] }
tower-http = { version = "0.3.5", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
